components/ProfileCard/_profilecard.scss
.profile-card {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	width: 60%;
	margin: 0 auto;

	&__title {
		@extend .heading;
		@extend .mobile-heading-5;
		margin: 16px 0 0;
		@media (min-width: 724px) {
			font-weight: 700;
			font-size: 2rem;
			line-height: 3.6rem;
		}
	}

	&__description {
		@extend .paragraph;
		@extend .mobile-paragraph-sm;
		margin: 0 0 8px;
		text-align: center;
		@media (min-width: 724px) {
			font-size: 14px;
			line-height: 20px;
		}
	}

	&__social {
		@extend .paragraph;
		@extend .mobile-paragraph-sm;
		font-weight: 500;
		display: flex;
		align-items: center;
		gap: 8px;
		margin: 12px 0 18px;
	}
}

.swiper-button-next:after,
.swiper-rtl .swiper-button-prev:after {
	color: white;
}

.swiper-button-prev:after,
.swiper-rtl .swiper-button-next:after {
	color: white;
}

